--- a/themes/pseudomuto/layouts/_default/baseof.html
+++ b/themes/pseudomuto/layouts/_default/baseof.html
@@ -21,9 +21,11 @@
     {{ template "_internal/google_analytics_async.html" . }}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    {{ block "sharing" . }}
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-521a7d057b074526"></script>
     <script type="text/javascript">
       addthis.layers({ 'theme': 'transparent', 'share': { 'numPreferredServices': 5 } });
     </script>
+    {{ end }}
   </body>
 </html>
