--- a/themes/pseudomuto/layouts/index.html
+++ b/themes/pseudomuto/layouts/index.html
@@ -1,5 +1,7 @@
 {{ define "title" }}{{ .Site.Title }}{{ end }}
 
+{{ define "sharing" }}{{ end }}
+
 {{ define "main" }}
   <header class="row text-center header">
     {{ with .Site.Params.authorimage }} <img src="/img/{{ . }}" alt="Author Image" class="img-circle text-center headshot"> {{ end }}
